--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base-64": "^1.0.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
@@ -23,7 +25,10 @@
     "nodemon": "^2.0.13",
     "path": "^0.12.7",
     "pug": "^3.0.2",
+    "redis": "^3.1.2",
     "request": "^2.88.2",
+    "sha1": "^1.1.1",
+    "utf8": "^3.0.0",
     "util": "^0.12.4"
   }
 }
